--- a/css/timeline.css
+++ b/css/timeline.css
@@ -19,22 +19,26 @@
 }
 
 .date {
-    margin-top: -10px;
-    top: 50%;
-    left: -158px;
-    font-size: 0.95em;
-    line-height: 20px;
-    position: absolute;
+    /*margin-top: -10px;*/
+    /*top: 50%;*/
+    /*left: -158px;*/
+    /*font-size: 0.95em;*/
+    /*position: absolute;*/
+    vertical-align: middle;
+    line-height: 5px;
+    font-family: Lato Thin;
+    font-size: 49px;
+    font-weight: 100;
 }
 
 .circle {
     margin-top: -10px;
-    top: 50%;
-    left: -35px;
-    width: 10px;
-    height: 10px;
-    background: #5A6581;
-    border: 5px solid #5A6581;
+    top: 30%;
+    left: -43px;
+    width: 25px;
+    height: 25px;
+    background: #3B3551;
+    border: 1px solid #5A6581;
     border-radius: 50%;
     display: block;
     position: absolute;
@@ -42,7 +46,7 @@
 
 .agenda .content {
     max-height: 20px;
-    padding: 50px 20px 0;
+    padding: 70px 45px 0;
     border-color: transparent;
     border-width: 2px;
     border-style: solid;
@@ -97,7 +101,7 @@
     transform: translateX(42px);
 }
 .radio:checked + .relative .circle {
-    background: #f98262;
+    background: #5A6581;
 }
 /*.radio:checked ~ .content {*/
     /*max-height: 180px;*/
@@ -107,7 +111,7 @@
     /*transition: max-height 0.4s linear, border-color 0.5s linear, transform 0.2s linear;*/
 /*}*/
 .radio:checked ~ .content p {
-    max-height: 200px;
+    max-height: 100%;
     color: #eee9dc;
     transition: color 0.3s linear 0.3s;
 }
